<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_first_fragment"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_second_fragment"
            android:icon="@drawable/ic_family"
            android:title="@string/menu_family" />
        <item
            android:id="@+id/nav_third_fragment"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />
    </group>


    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/subtitle"
            android:title="@string/menu_logout">
            <menu>
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/menu_logout" />
            </menu>
        </item>
    </group>
</menu>