<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@drawable/wallpaper_login"
    tools:context=".system.drawmenu.ProfileF">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        tools:layout_editor_absoluteX="49dp">


        <TextView
            android:id="@+id/titlePasswordForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="Modifica qui i tuoi dati"
            android:textSize="23dp"
            android:layout_marginBottom="20dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/NameLayoutProfile"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            app:boxStrokeColor="@color/white"
            app:errorEnabled="true"
            app:helperText="@string/name_hint"
            app:hintTextColor="@color/white">
            <!--app:startIconDrawable=""-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtNameProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/SurnameLayoutProfile"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/surname_hint"
            app:boxStrokeColor="@color/white"
            app:errorEnabled="true"
            app:helperText="@string/surname_hint"
            app:hintTextColor="@color/white">
            <!--app:startIconDrawable=""-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtSurnameProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/EmailLayoutProfile"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint"
            app:boxStrokeColor="@color/white"
            app:errorEnabled="true"
            app:helperText="@string/email_hint"
            app:hintTextColor="@color/white">
            <!--app:startIconDrawable=""-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmailProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/PasswordLayoutProfile"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            app:boxStrokeColor="@color/white"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:helperText="@string/password_hint"
            app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPasswordProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnModifyProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/bottom_radius"
            android:text="@string/modify_profile" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>